--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python_version==3.6
 joblib==1.0.1
-matplotlib==3.4
+matplotlib==3.4;python_version=="3.6"
 numpy==1.19.3+mkl
 pandas==1.1.5
 shap==0.46.0
