--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-joblib==1.0.1
-matplotlib==3.3.3
-numpy==1.19.3+mkl
-pandas==1.1.5
-shap==0.46.0
+joblib==1.3.2
+matplotlib==3.7.4
+numpy==1.24.4
+pandas==2.0.3
+shap==0.44.1
 streamlit==1.38.0
